# archehr-qa-2026-uic-aihealth4all

./: .dockerignore  .env.example  .gitignore  README.md  eval.Dockerfile  pyproject.toml
configs/: config.yaml  experiment-analysis-config.yaml  linguistic-analysis-config.yaml  log-analysis-config.yaml
outputs/: dev_official_scores.csv
prompts/: answer-evidence-alignment-v2.txt  answer-evidence-alignment-v3.txt  answer-evidence-alignment-v4.txt  answer-evidence-alignment-v5.txt  answer-evidence-alignment.txt  answer-generation-answer-first-v10.txt  answer-generation-answer-first-v11.txt  answer-generation-answer-first-v2.txt  answer-generation-answer-first-v3.txt  answer-generation-answer-first-v4.txt  answer-generation-answer-first-v5.txt  answer-generation-answer-first-v6.txt  answer-generation-answer-first-v7.txt  answer-generation-answer-first-v8.txt  answer-generation-answer-first-v9.txt  answer-generation-answer-first.txt  answer-rewrite.txt  evidence-classification-answer-first-v2.txt  evidence-classification-answer-first-v3.txt  evidence-classification-answer-first-v4.txt  evidence-classification-answer-first.txt  evidence-classification-baseline-heuristics.txt  evidence-classification-baseline.txt  evidence-classification-confidence-calibrated.txt  evidence-classification-contrastive-learning-5examples.txt  evidence-classification-contrastive-learning.txt  evidence-classification-minimal-sufficiency-aggressive.txt  evidence-classification-minimal-sufficiency-conservative.txt  evidence-classification-question-decomposition.txt  gqa-all-relevant.txt  (+5 more)
(+2038 files in other folders)
