[project]
name = "ehr-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.0",
    "dspy>=2.6.13",
    "hydra-core>=1.3.2",
    "langchain-openai>=0.3.14",
    "litellm>=1.66.3",
    "matplotlib>=3.10.8",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "spacy>=3.8.11",
    "tenacity>=9.1.2",
    "textblob>=0.19.0",
    "textstat>=0.7.13",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
eval = [
    "ragchecker>=0.1.9",
]
